--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 <span>
     <h6><strong> BRIAN YULO NG </strong></h6>
     <div class="con">
-<img src="Images/Contact.jpg" width=300px align="left" hspace="70">
+<img src="Images/contact.jpg" width=300px align="left" hspace="70">
 </div>
 
 <div class="contact">
