--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <a href="bio.html">Bio</a>
         <a href="contact.html">Contact</a>
     </div>
-
+<div id="contact">
 <span>
     <h6><strong> BRIAN YULO NG </strong></h6>
     <div class="con">
