--- a/dishes.html
+++ b/dishes.html
@@ -77,6 +77,16 @@
     </div>
     <div class="dish" id='food-28'>
     </div>
+    <div class="dish" id='food-29'>
+    </div>
+    <div class="dish" id='food-30'>
+    </div>
+    <div class="dish" id='food-31'>
+    </div>
+    <div class="dish" id='food-32'>
+    </div>
+    <div class="dish" id='food-33'>
+    </div>
 </div>
 </div>
 </body>
